--- a/debian/control
+++ b/debian/control
@@ -14,15 +14,15 @@ Build-Depends:
  libgdk-pixbuf2.0-dev (>= 2.22.0),
  libgirepository1.0-dev (>= 0.10.2-1~),
  libglib2.0-dev (>= 2.37.3),
- libgnomekbd-dev,
+#libgnomekbd-dev,
  libgtk-3-dev (>= 3.3.16),
- libx11-dev,
+#libx11-dev,
  libxkbfile-dev,
  meson,
  python,
  python-gi-dev,
  python3,
- valac,
+#valac,
  yelp-tools,
 Standards-Version: 3.9.6
 
